# jpize-core

./: README.md  pom.xml
.github/workflows/: qodana_code_quality.yml
android/: pom.xml
backends/jpize-core-android/: pom.xml
backends/jpize-core-lwjgl/: pom.xml
backends/jpize-core-lwjgl/src/classgen/java/: ClassWriter.java  LwjglGlClassesGenerator.java
backends/jpize-core-lwjgl/src/test/java/: AnimationTest.java  AtlasTest.java  Camera3DTest.java  CanvasTest.java  ClothSimulation.java  InputTest.java  LoadingWindowTest.java  MultipleWindowsTest.java  NinePatchTest.java  RenderTest.java  ScreensTest.java  TextEditorTest.java  TextTest.java  TileScissorTest.java  UBOTest.java
backends/jpize-core-lwjgl/src/test/java/quadtree/: Direction.java  QuadNode.java  QuadNodeChildren.java  QuadNodeNeighbors.java  QuadTree.java  QuadTreeTest.java  Quadrant.java
backends/jpize-core-lwjgl/src/test/resources/font/: bchb8i.afm  bchb8i.pfb
core/: pom.xml
core/src/main/java/jpize/app/: Context.java  ContextManager.java  Jpize.java
core/src/main/java/jpize/io/: IAllocator.java  IWindow.java
core/src/main/java/jpize/opengl/: GlError.java  GlObject.java
core/src/main/resources/shader/render_quad/: vert.glsl
core/src/main/resources/shader/shadow_mapping/: vert.glsl
core/src/main/resources/shader/texture_batch/: frag.glsl  vert.glsl
core/src/main/resources/shader/vertex_batch/: frag.glsl
jni/freetype/: CMakeLists.txt
jni/freetype/src/: jpize_stb_freetype_FreeType.cpp  jpize_stb_freetype_FreeType.h  jpize_stb_freetype_FreeTypeBitmap.cpp  jpize_stb_freetype_FreeTypeFace.cpp  jpize_stb_freetype_FreeTypeGlyph.cpp  jpize_stb_freetype_FreeTypeGlyph.h  jpize_stb_freetype_FreeTypeGlyphMetrics.cpp  jpize_stb_freetype_FreeTypeGlyphSlot.cpp  jpize_stb_freetype_FreeTypeSize.cpp  jpize_stb_freetype_FreeTypeSizeMetrics.cpp  jpize_stb_freetype_FreeTypeStroker.cpp  jpize_stb_freetype_FreeTypeStroker.h
jni/freetype/src/headers/: jpize_stb_freetype_FreeTypeBitmap.h  jpize_stb_freetype_FreeTypeFace.h  jpize_stb_freetype_FreeTypeGlyphMetrics.h  jpize_stb_freetype_FreeTypeGlyphSlot.h  jpize_stb_freetype_FreeTypeSize.h
jpize-core-android/: pom.xml
jpize-core-lwjgl/: pom.xml
jpize-core-lwjgl/src/test/java/jpize/test/: AnimationTest.java  AtlasTest.java  Camera3DTest.java  (+11 more)
lwjgl/: pom.xml
lwjgl/src/test/java/: AtlasTest.java  CanvasTest.java  LoadingWindowTest.java  MeshTest.java  MultipleWindowsTest.java  NinePatchTest.java  ScreensTest.java  TextEditorTest.java  TextTest.java  TileScissorTest.java
src/main/java/jpize/app/: Context.java  ContextBuilder.java  ContextManager.java  IContextBuilder.java  IContextManager.java  Jpize.java  JpizeApplication.java  SyncExecutor.java
src/main/java/jpize/context/: Context.java  IContextBuilder.java  IContextManager.java  IWindow.java  Jpize.java  JpizeApplication.java  SyncExecutor.java
src/main/java/jpize/gl/: GL20.java  GL30.java  GL31.java  GL32.java  Gl.java  GlError.java  GlObject.java  IGL20.java  IGL30.java  IGL31.java  IGL32.java
src/main/java/jpize/glfw/: Glfw.java  GlfwError.java  GlfwEvent.java  GlfwImage.java  GlfwJoystick.java  GlfwObjectLong.java
src/main/java/jpize/io/: IWindow.java
src/main/java/jpize/opengl/: GLError.java  GLObject.java  Gl.java  GlError.java  IGL11.java  IGL12.java  IGL13.java  IGL14.java  IGL15.java  IGL20.java  IGL21.java  IGL30.java  IGL31.java  IGL32.java  IGL33.java  IGL40.java  IGL41.java  IGL42.java  IGL43.java  IGL44.java  IGL45.java  IGL46.java
src/main/java/jpize/stb/: NativeLibLoader.java
src/main/java/jpize/util/: Animation.java  Canvas.java  Insetsf.java  Insetsi.java  MemoryUtils.java  RenderQuad.java  ScreenUtils.java  ShaderBuilder.java  SkyBox.java  Skybox.java  TextureBatch.java  TextureUtils.java  Utils.java
src/main/resources/shader/base/: pos2-color.frag  pos2-color.vert
src/main/resources/shader/bloom/: blur.frag  bright.frag  combine.frag  vert.glsl
src/main/resources/shader/gaussian_blur/: frag.glsl
src/main/resources/shader/motion_blur/: frag.glsl
src/main/resources/shader/render_quad/: frag.glsl  vert.glsl
src/main/resources/shader/screen_quad/: frag.glsl  vert.glsl
src/main/resources/shader/shadow_mapping/: frag.glsl  vert.glsl
src/main/resources/shader/skybox/: frag.glsl  vert.glsl
src/main/resources/shader/text_renderer/: frag.glsl  vert.glsl
src/main/resources/shader/texture_batch/: frag.glsl  vert.glsl
src/main/resources/shader/vertex_batch/: frag.glsl  vert.glsl
src/test/java/: Test.java  TextEditorTest.java  TextTest.java
src/test/java/jpize/test/: AnimationTest.java  AtlasTest.java  Camera3DTest.java  CanvasTest.java  ClothSimulation.java  DevelopTextInput.java  LoadingWindowTest.java  MeshTest.java  MultipleWindowsTest.java  NinePatchTest.java  PixmapTest.java  RenderTest.java  ScreensTest.java  TextEditorTest.java  TextTest.java  TileScissorTest.java  UBOTest.java
src/test/resources/: frag.glsl  shader.frag  vert.glsl
(+673 files in other folders)
